--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with: 
-          node-version: '17.4.0.'
+          node-version: '16.13.2'
 
       - name: npm install
         run: npm i
