--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,4 @@ jobs:
           heroku_app_name: "pokedex-2022" #Must be unique in Heroku
           heroku_email: "mkkaarto@gmail.com"
           healthcheck: "https://pokedex-2022.herokuapp.com/health"
+          rollbackonhealthcheckfailed: true
