--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -6,7 +6,10 @@ name: Hello World
 on:
   # Triggers the workflow on push events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
+  pull_request:
+    branches: [master]
+    types: [synchronize, opened]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -23,9 +26,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo "Hello, world!"
-        
+
       - name: Print date
         run: echo date
-        
+
       - name: Print directory contents
         run: echo ls -l
