--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: "patch"
   a_test_job:
-  if: ${{ toJson(github.event.commits.*.message.join().contains('#skip'))}}
+  if: ${{ toJson(github.event.commits.*.message.join().contains('#skip') }}
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
